syntax = "proto3";


package pb;


option go_package = "github.com/root27/pb";



message CreateRequest {
    string name = 1;
    string email = 2;
    
}


message CreateResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    
}


service UserService {
    rpc Create(CreateRequest) returns (CreateResponse);
    
}
