syntax="proto3";

package pb;

option go_package = "github.com/root27/go-grpc/pb";


service HelloService {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
}


message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

